--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "jest --config=jest.config.js"
+    "test": "jest"
   },
   "dependencies": {
     "@babel/cli": "^7.23.0",
@@ -22,7 +22,6 @@
     "sass": "^1.69.5"
   },
   "devDependencies": {
-    
     "@babel/plugin-transform-react-jsx": "^7.22.15",
     "@babel/preset-typescript": "^7.23.2",
     "@jest/globals": "^29.7.0",
@@ -34,12 +33,6 @@
     "eslint": "^8",
     "eslint-config-next": "14.0.0",
     "jest": "^29.7.0",
-
-    
-    "babel-jest": "26.6.3",
-    "node-sass": "4.14.1",
-    "react-test-renderer": "17.0.1",
-
     "ts-jest": "^29.1.1",
     "typescript": "^5"
   }
