updated funcionalities and add requestapi

--- a/package.json
+++ b/package.json
@@ -14,15 +14,19 @@
     "@babel/core": "^7.23.2",
     "@babel/preset-env": "^7.23.2",
     "@types/react-test-renderer": "^18.0.5",
+    "axios": "^1.6.0",
     "babel-jest": "^29.7.0",
     "framer-motion": "^10.16.4",
     "next": "14.0.0",
     "react": "^18",
     "react-dom": "^18",
-    "sass": "^1.69.5"
+    "react-icons": "^4.11.0",
+    "sass": "^1.69.5",
+    "styled-components": "^6.1.0"
   },
   "devDependencies": {
     "@babel/plugin-transform-react-jsx": "^7.22.15",
+    "@babel/preset-react": "^7.22.15",
     "@babel/preset-typescript": "^7.23.2",
     "@jest/globals": "^29.7.0",
     "@testing-library/react": "^14.0.0",
