--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@babel/preset-env": "^7.23.2",
     "@types/react-test-renderer": "^18.0.5",
     "axios": "^1.6.0",
+    "axios-mock-adapter": "^1.22.0",
     "framer-motion": "^10.16.4",
     "icons": "^1.0.0",
     "next": "14.0.0",
@@ -43,6 +44,7 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "msw": "^2.0.1",
     "ts-jest": "^29.1.1",
     "typescript": "^5"
   }
