--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-icons": "^4.11.0",
     "react-intersection-observer": "^9.5.2",
     "sass": "^1.69.5",
-    "styled-components": "^6.1.0"
+    "styled-components": "^6.1.0",
+    "swiper": "^11.0.3"
   },
   "devDependencies": {
     "@babel/plugin-transform-react-jsx": "^7.22.15",
