--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react-test-renderer": "^18.0.5",
     "axios": "^1.6.0",
     "axios-mock-adapter": "^1.22.0",
+    "express": "^4.18.2",
     "framer-motion": "^10.16.4",
     "icons": "^1.0.0",
     "next": "14.0.0",
