create news api

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.18.2",
     "framer-motion": "^10.16.4",
     "icons": "^1.0.0",
+    "mongoose": "^8.0.1",
     "next": "14.0.0",
     "react": "^18.2.0",
     "react-dom": "^18",
