--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@babel/core": "^7.23.2",
     "@babel/preset-env": "^7.23.2",
     "@types/react-test-renderer": "^18.0.5",
-    "axios": "^1.6.0",
+    "axios": "^1.6.2",
     "axios-mock-adapter": "^1.22.0",
     "express": "^4.18.2",
     "framer-motion": "^10.16.4",
@@ -37,6 +37,7 @@
     "@testing-library/jest-dom": "^6.1.4",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.5.1",
+    "@types/axios": "^0.14.0",
     "@types/jest": "^29.5.7",
     "@types/node": "^20",
     "@types/react": "^18",
